# jpp-interpreter

./: Makefile  README.md  interpreteur.cabal  run  runbnfc.sh  stack.yaml  testall.sh
app/: Main.hs
bad/: arithmetic-on-variant.hs  case-exhausted.hs  case-left-right-type.hs  case-undefined-cons.hs  data-additional-params.hs  data-redefinition-local.hs  data-redefinition.hs  incorrect-ref.hs  incorrect-type-generalied.hs  incorrect-type.hs  int-with-parameters.hs  negative-int-literal.hs  redefinition-case.hs  redefinition-cons.hs  redefinition.hs  shadowing.hs  sum-wrong-case.hs  type-redefinition.hs  undefined-type.hs  undefined.hs  unknown-identifier.hs  variant.hs  wrong-number-of-arguments.hs  wrong-type-hint.hs
data/: builtins.hs
good/: case-empty.hs  case-name.hs  const.hs  division-by-zero.hs  division.hs  factorial-let.hs  factorial-two-func.hs  factorial-verbose-2.hs  factorial-verbose.hs  factorial-where-two-func.hs  factorial-where-verbose-2.hs  factorial-where-verbose.hs  factorial-where.hs  factorial.hs  function.hs  has-builtins.hs  int-comparison.hs  list-of-functions.hs  list.hs  map.hs  sum.hs  variant-equality.hs  variant-inequality.hs
good/complex/: bintree.hs  even-list.hs  factorial-case.hs  factorial-let.hs  factorial-two-func.hs  factorial-verbose-2.hs  factorial-verbose.hs  factorial.hs  let-id.hs  listtree.hs  sum-maybe.hs  sum.hs
good/unit/: add.hs  boolean.hs  case-nested.hs  (+26 more)
src/: AbsGrammar.hs  DocGrammar.txt  ErrM.hs  Interpreter.hs  LayoutGrammar.hs  LexGrammar.hs  LexGrammar.x  ParGrammar.y  PrintGrammar.hs  Reconstruction.hs  SimpleGrammar.hs  Simplifier.hs  SkelGrammar.hs  TestGrammar.hs  grammar.cf
(+4 files in other folders)
