name:                interpreteur
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/interpreteur#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       AbsGrammar
                       LexGrammar
                       ParGrammar
                       PrintGrammar
                       SkelGrammar
                       ErrM
                       Interpreter
  build-depends:       base >= 4.7 && < 5
                     , BNFC
                     , array
                     , containers
  default-language:    Haskell2010

executable interpreteur-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interpreteur
  default-language:    Haskell2010

test-suite interpreteur-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interpreteur
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/interpreteur
